# cattrs-extras

./: .bumpversion.cfg  .gitignore  CHANGELOG  LICENSE  Makefile  README.md  mypy.ini  pylintrc  pyproject.toml
.github/workflows/: master.yml  release.yml  test.yml
src/cattrs_extras/: converter.py
src/cattrs_extras/tortoise/: converter.py  fields.py  model.py
tests/cattrs_extras/: test_converter.py  test_tortoise.py
