[tool.poetry]
name = "cattrs-extras"
version = "0.2.0"
description = "Advanced converters for cattrs"
authors = ["Lev Gorodetskiy <github@droserasprout.space>"]
readme = "README.md"
homepage = "https://github.com/droserasprout/cattrs-extras"
repository = "https://github.com/droserasprout/cattrs-extras"
keywords = ["tortoise", "cattrs", "attrs", "serialization", "dataclass"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Typing :: Typed"
]
packages = [
    { include = "cattrs_extras", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
cattrs = "^22.1.0"
dateutils = "^0.6.12"
exceptiongroup = "^1.0.0-rc.2"
pytimeparse = "^1.1.8"
tortoise-orm = {version = "^0.18.0", optional = true}
typing-extensions = "^4.1.1"
typing-inspect = "^0.7.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
bump2version = "^1.0.1"
diff-cover = "^5.0.1"
flake8 = "^3.9.2"
flake8-bugbear = "^22.1.11"
flake8-comprehensions = "^3.8.0"
flake8-return = "^1.1.3"
flake8-simplify = "^0.14.5"
flakehell = "^0.9.0"
isort = "^5.9.3"
mypy = "^0.910"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
types-python-dateutil = "^2.8.4"

[tool.poetry.extras]
tortoise = ["tortoise-orm"]

[tool.isort]
force_single_line = true
line_length = 120

[tool.black]
line-length = 120
target-version = ['py310']

[tool.flakehell]
format = "colored"
max_line_length = 120
show_source = true
extended_default_ignore = []

[tool.flakehell.plugins]
pyflakes = ["+*"]
"flake8-*" = ["+*"]
flake8-docstrings = ["-*"]
flake8-simplify = ["-SIM106"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
