[tool.poetry]
name = "cattrs-extras"
version = "0.2.0"
description = "Advanced converters for cattrs"
license = "MIT"
authors = ["Lev Gorodetskiy <github@droserasprout.space>"]
readme = "README.md"
homepage = "https://github.com/droserasprout/cattrs-extras"
repository = "https://github.com/droserasprout/cattrs-extras"
keywords = ["tortoise", "cattrs", "attrs", "serialization", "dataclass"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Typing :: Typed"
]
packages = [
    { include = "cattrs_extras", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
# NOTE: As of March 2022, cattrs has switched to calendar versioning
cattrs = ">=23.1.2"
dateutils = "^0.6.12"
exceptiongroup = "^1.0.0-rc.2"
pytimeparse = "^1.1.8"
tortoise-orm = {version = "^0.18.0", optional = true}
typing-extensions = "^4.1.1"
typing-inspect = "^0.7.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
bump2version = "^1.0.1"
diff-cover = "^6.5.0"
flake8-return = "^1.1.3"
flake8-comprehensions = "^3.8.0"
flake8-bugbear = "^22.1.11"
flake8-simplify = "^0.19.2"
flakeheaven = "^1.0.1"
isort = "^5.9.3"
mypy = "^0.960"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"

[tool.poetry.extras]
tortoise = ["tortoise-orm"]

[tool.isort]
line_length = 140
force_single_line = true

[tool.black]
line-length = 140
target-version = ['py310']
skip-string-normalization = true

[tool.flakeheaven]
format = "colored"
max_line_length = 140
show_source = true
extended_default_ignore = []

[tool.flakeheaven.plugins]
"flake8-*" = ["+*", "-C417", "-SIM106", "-SIM114", "-SIM102"]
flake8-docstrings = ["-*"]

[tool.pytest.ini_options]
asyncio_mode = 'auto'

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"